Moved the list page & updated names to use folder structure

--- a/HRTraining_ASPNETCore/Pages/Workouts/List.cshtml
+++ b/HRTraining_ASPNETCore/Pages/Workouts/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HRTraining_ASPNETCore.Pages.WorkoutsListModel
+@model HRTraining_ASPNETCore.Pages.Workouts.WorkoutsListModel
 @{
     
 }
